--- a/api/pom.xml
+++ b/api/pom.xml
@@ -11,31 +11,38 @@
 
     <artifactId>game-api</artifactId>
 
+    <properties>
+        <log4j-api.version>2.9.1</log4j-api.version>
+        <reflections.version>0.9.11</reflections.version>
+        <netty-socketio.version>1.7.12</netty-socketio.version>
+        <socket.io-client.version>1.0.0</socket.io-client.version>
+    </properties>
+
     <dependencies>
         <dependency>
             <groupId>org.apache.logging.log4j</groupId>
             <artifactId>log4j-api</artifactId>
-            <version>2.9.1</version>
+            <version>${log4j-api.version}</version>
         </dependency>
         <dependency>
             <groupId>org.apache.logging.log4j</groupId>
             <artifactId>log4j-core</artifactId>
-            <version>2.9.1</version>
+            <version>${log4j-api.version}</version>
         </dependency>
         <dependency>
             <groupId>org.reflections</groupId>
             <artifactId>reflections</artifactId>
-            <version>0.9.11</version>
+            <version>${reflections.version}</version>
         </dependency>
         <dependency>
             <groupId>com.corundumstudio.socketio</groupId>
             <artifactId>netty-socketio</artifactId>
-            <version>1.7.12</version>
+            <version>${netty-socketio.version}</version>
         </dependency>
         <dependency>
             <groupId>io.socket</groupId>
             <artifactId>socket.io-client</artifactId>
-            <version>1.0.0</version>
+            <version>${socket.io-client.version}</version>
         </dependency>
     </dependencies>
 
