--- a/client/pom.xml
+++ b/client/pom.xml
@@ -12,11 +12,15 @@
     <artifactId>game-client</artifactId>
     <description>Game Client</description>
 
+    <properties>
+        <socket.io-client.version>1.0.0</socket.io-client.version>
+    </properties>
+
     <dependencies>
         <dependency>
             <groupId>io.socket</groupId>
             <artifactId>socket.io-client</artifactId>
-            <version>1.0.0</version>
+            <version>${socket.io-client.version}</version>
         </dependency>
     </dependencies>
 
