--- a/core/pom.xml
+++ b/core/pom.xml
@@ -13,50 +13,56 @@
     <description>Game Core</description>
 
     <properties>
-        <springframework.version>5.0.0.RELEASE</springframework.version>
+
+        <netty-socketio.version>1.7.12</netty-socketio.version>
+        <socket.io-client.version>1.0.0</socket.io-client.version>
+        <log4j-api.version>2.9.1</log4j-api.version>
+        <reflections.version>0.9.11</reflections.version>
+        <junit.version>4.12</junit.version>
+        <mockito-core.version>2.11.0</mockito-core.version>
     </properties>
 
     <dependencies>
         <dependency>
-            <groupId>com.corundumstudio.socketio</groupId>
-            <artifactId>netty-socketio</artifactId>
-            <version>1.7.12</version>
+            <groupId>org.morrise</groupId>
+            <artifactId>game-api</artifactId>
+            <version>${project.version}</version>
         </dependency>
         <dependency>
-            <groupId>io.socket</groupId>
-            <artifactId>socket.io-client</artifactId>
-            <version>1.0.0</version>
+            <groupId>com.corundumstudio.socketio</groupId>
+            <artifactId>netty-socketio</artifactId>
+            <version>${netty-socketio.version}</version>
         </dependency>
+        <!--<dependency>-->
+            <!--<groupId>io.socket</groupId>-->
+            <!--<artifactId>socket.io-client</artifactId>-->
+            <!--<version>${socket.io-client.version}</version>-->
+        <!--</dependency>-->
         <dependency>
             <groupId>org.apache.logging.log4j</groupId>
             <artifactId>log4j-api</artifactId>
-            <version>2.9.1</version>
+            <version>${log4j-api.version}</version>
         </dependency>
         <dependency>
             <groupId>org.apache.logging.log4j</groupId>
             <artifactId>log4j-core</artifactId>
-            <version>2.9.1</version>
+            <version>${log4j-api.version}</version>
         </dependency>
         <dependency>
             <groupId>org.reflections</groupId>
             <artifactId>reflections</artifactId>
-            <version>0.9.11</version>
-        </dependency>
-        <dependency>
-            <groupId>org.morrise</groupId>
-            <artifactId>game-api</artifactId>
-            <version>1.0-SNAPSHOT</version>
+            <version>${reflections.version}</version>
         </dependency>
         <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
-            <version>4.12</version>
+            <version>${junit.version}</version>
             <scope>test</scope>
         </dependency>
         <dependency>
             <groupId>org.mockito</groupId>
             <artifactId>mockito-core</artifactId>
-            <version>2.11.0</version>
+            <version>${mockito-core.version}</version>
             <scope>test</scope>
         </dependency>
     </dependencies>
