--- a/ship-server/pom.xml
+++ b/ship-server/pom.xml
@@ -14,43 +14,40 @@
     <description>Ship Server</description>
 
     <properties>
+        <netty-socketio.version>1.7.12</netty-socketio.version>
+        <socket.io-client.version>1.0.0</socket.io-client.version>
+        <log4j-api.version>2.9.1</log4j-api.version>
+        <reflections.version>0.9.11</reflections.version>
+        <game-core.version>1.0-SNAPSHOT</game-core.version>
+        <jackson-dataformat-yaml.version>2.8.3</jackson-dataformat-yaml.version>
+        <maven-assembly-plugin.version>3.1.0</maven-assembly-plugin.version>
     </properties>
 
     <dependencies>
         <dependency>
-            <groupId>com.corundumstudio.socketio</groupId>
-            <artifactId>netty-socketio</artifactId>
-            <version>1.7.12</version>
-        </dependency>
-        <dependency>
-            <groupId>io.socket</groupId>
-            <artifactId>socket.io-client</artifactId>
-            <version>1.0.0</version>
+            <groupId>org.morrise</groupId>
+            <artifactId>game-core</artifactId>
+            <version>${project.version}</version>
         </dependency>
         <dependency>
             <groupId>org.apache.logging.log4j</groupId>
             <artifactId>log4j-api</artifactId>
-            <version>2.9.1</version>
+            <version>${log4j-api.version}</version>
         </dependency>
         <dependency>
             <groupId>org.apache.logging.log4j</groupId>
             <artifactId>log4j-core</artifactId>
-            <version>2.9.1</version>
+            <version>${log4j-api.version}</version>
         </dependency>
         <dependency>
             <groupId>org.reflections</groupId>
             <artifactId>reflections</artifactId>
-            <version>0.9.11</version>
-        </dependency>
-        <dependency>
-            <groupId>org.morrise</groupId>
-            <artifactId>game-core</artifactId>
-            <version>1.0-SNAPSHOT</version>
+            <version>${reflections.version}</version>
         </dependency>
         <dependency>
             <groupId>com.fasterxml.jackson.dataformat</groupId>
             <artifactId>jackson-dataformat-yaml</artifactId>
-            <version>2.8.3</version>
+            <version>${jackson-dataformat-yaml.version}</version>
         </dependency>
     </dependencies>
     <build>
@@ -64,6 +61,7 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-assembly-plugin</artifactId>
+                <version>${maven-assembly-plugin.version}</version>
                 <executions>
                     <execution>
                         <phase>package</phase>
@@ -71,8 +69,6 @@
                             <goal>single</goal>
                         </goals>
                         <configuration>
-                            <source>1.8</source>
-                            <target>1.8</target>
                             <archive>
                                 <manifest>
                                     <mainClass>
